responsive nave done begin jfac and continue

--- a/src/css/animation.css
+++ b/src/css/animation.css
@@ -18,3 +18,10 @@
     opacity: 1;
   }
 }
+.enter{
+  opacity: 1;
+  transition: opacity 3000ms linear 3000ms
+}
+.transition{
+  transition: 4s
+}
