--- a/src/css/Jfac20.css
+++ b/src/css/Jfac20.css
@@ -1,5 +1,5 @@
 .inf-j20{
-  background-color: rgb(50, 57, 70);
+  background-image: url("../Images/ban.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat
