--- a/src/css/galery.css
+++ b/src/css/galery.css
@@ -10,20 +10,28 @@
   transition: 1s;
 }
 
-.grid-container {
+.grid-container{
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
-  grid-gap: 5px;
-  grid-auto-rows: minmax(180px, auto);
-  grid-auto-flow: dense;
-
+  grid-template-columns: repeat(auto-fit,minmax(300px ,1fr));
+  grid-gap:15px;
 }
-.span-2 {
-  grid-column-end: span 2;
-  grid-row-end: span 2;
+.grid-container img {
+  box-shadow: 5px 2px rgb(255, 255, 255);
+  border-radius: 5px;
+  transition: 0.4s
+}
+.grid-container img:hover{
+  transform: scale(1.5)
 }
 
-.span-3 {
-  grid-column-end: span 3;
-  grid-row-end: span 4;
+@media(max-width:550px){
+  .grid-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fill,minmax(100px ,1fr));
+    grid-gap:15px;
+  }
+  .grid-container img:hover{
+    transform: none
+  }
+  
 }
