--- a/src/css/Homepage.css
+++ b/src/css/Homepage.css
@@ -1,5 +1,5 @@
 .inf-bg-counter{
-  background-image: url("../Images/bgcounter.png");
+  background-image: url("../images/bgcounter.png");
   background-position: center;
   background-size: cover;
 }
