--- a/src/css/galery.css
+++ b/src/css/galery.css
@@ -1,5 +1,5 @@
 .inf-galeryback {
-  background-image: url("../Images/refaccback.jpg");
+  background-image: url("../images/refaccback.jpg");
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
