Api called with axios fixed galery fixed videotheque fixed

--- a/src/css/animation.css
+++ b/src/css/animation.css
@@ -25,3 +25,9 @@
 .transition{
   transition: 4s
 }
+.react-images__view,.react-images__view--isModal {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  align-items: center
+}
