--- a/src/css/downloads.css
+++ b/src/css/downloads.css
@@ -62,6 +62,9 @@
     padding-left: 8rem
   }
 }
+.text_slide{
+  width: 100%;
+}
 
 @media(max-width:715px){
   .text_slide{
@@ -97,6 +100,7 @@
   .inf_card_bg{
     height: auto;
   }
+
 
 }
 
