--- a/src/css/galery.css
+++ b/src/css/galery.css
@@ -9,10 +9,12 @@
 .inf-div-galery img {
   transition: 1s;
 }
-
+.imagegalerywith{
+  max-width: 250px;
+}
 .grid-container{
   display: grid;
-  grid-template-columns: repeat(auto-fit,minmax(300px ,1fr));
+  grid-template-columns: repeat(auto-fit,minmax(100px ,1fr));
   grid-gap:15px;
 }
 .grid-container img {
